<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/titleSection"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00bfa5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detailActivity_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:scaleType="center"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-20dp"
                android:layout_marginStart="-20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imageSection"
                    android:layout_width="170dp"
                    android:layout_height="300dp"
                    android:layout_below="@+id/titleSection"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tv_detailActivity_poster_image"
                        android:layout_width="170dp"
                        android:layout_height="300dp"
                        android:layout_below="@+id/titleSection"
                        android:layout_gravity="top|left"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleSection"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="70dp"
                    android:layout_toRightOf="@+id/imageSection"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_detailActivity_DateRelease_header"
                        style="@style/Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:text="@string/INFO_DATERELEASE"
                        android:textColor="@color/colorPrimary"
                        android:textColorLink="@color/cyan" />

                    <TextView
                        android:id="@+id/tv_detailActivity_DateRelease"
                        style="@style/Info"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_toRightOf="@+id/tv_detailActivity_DateRelease_header"
                        android:text="@string/INFO_DATERELEASE"
                        android:textColor="@color/colorPrimary"
                        android:textColorLink="@color/cyan" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_detailActivity_Rating_header"
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/INFO_RATING"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan" />

                        <TextView
                            android:id="@+id/tv_detailActivity_Rating"
                            style="@style/Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="1dp"
                            android:layout_marginStart="70dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/INFO_RATING"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan" />
                    </RelativeLayout>


                    <Button
                        android:id="@+id/btn_favorite"
                        style="@android:style/Widget.Button.Toggle"
                        android:layout_width="110dp"
                        android:layout_height="45dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/blue"
                        android:gravity="center"
                        android:text="@string/add_to_favorite"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textColorLink="@color/black"
                        android:textIsSelectable="false"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/love_icon"
                        android:layout_width="45dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignTop="@+id/btn_favorite"
                        android:layout_marginLeft="47dp"
                        android:layout_marginStart="47dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/icons8_love_64" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/downSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topSection"
                android:layout_marginLeft="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <!--<LinearLayout-->
                <!--android:id="@+id/favouriteSection"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:orientation="vertical">-->
                <!--&lt;!&ndash;android:layout_marginBottom="@dimen/activity_vertical_margin">&ndash;&gt;-->
                <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<ImageView-->
                <!--android:id="@+id/love_icon"-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:layout_toLeftOf="@id/btn_favorite"-->
                <!--android:src="@drawable/icons8_love_64" />-->

                <!--<Button-->
                <!--android:id="@+id/btn_favorite"-->
                <!--style="@android:style/Widget.Button.Toggle"-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="45dp"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginEnd="101dp"-->
                <!--android:layout_marginRight="101dp"-->
                <!--android:background="@color/blue"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/add_to_favorite"-->
                <!--android:textAllCaps="true"-->
                <!--android:textColor="@android:color/background_light"-->
                <!--android:textColorLink="@color/textwhite"-->
                <!--android:textIsSelectable="false"-->
                <!--android:textSize="14sp" />-->
                <!--</RelativeLayout>-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:id="@+id/downTextSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/downSection"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/overview_header"
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/INFO_DESCRIPTION"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_detailActivity_desc"
                            style="@style/Info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/overview_header"
                            android:layout_toRightOf="@id/overview_header"
                            android:text="@string/INFO_DESCRIPTION"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/trailer_header"
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/INFO_TRAILERS"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_trailer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/trailer_header"
                            android:layout_toRightOf="@+id/trailer_header"
                            android:paddingBottom="25dp"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan"></android.support.v7.widget.RecyclerView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/review_header"
                            style="@style/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/INFO_REVIEWS"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_review"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="7dp"
                            android:layout_marginStart="7dp"
                            android:layout_marginTop="0dp"
                            android:layout_toEndOf="@+id/review_header"
                            android:layout_toRightOf="@+id/review_header"
                            android:paddingBottom="80dp"
                            android:textColor="@color/colorPrimary"
                            android:textColorLink="@color/cyan"></android.support.v7.widget.RecyclerView>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
